@@ -268,7 +268,8 @@ Might switch radar background to use a horizontally stretched texture
 instead of a material, since the interlace effect is static. Although 
 it probably saves texture sampling to have the shader compute the effect.
 Otoh, if we bring back radar fritzing, a material would be a good way 
-to animate it.
+to animate it. It's at least handy in letting us quickly iterate 
+the design before committing to a texture.
 
 Would be nice to use the Pause key instead of 'P' to pause the game. 
 Unfortunately, UE detects Pause keypresses itself and toggles inputs on/off, 
